--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       <li><a href="#/about">About</a></li>
       <li><a href="#/contact">Contact</a></li>
        <li><a href="#/register">Register</a></li>
-       <li><a href="#/login">Login</a></li>
+       <li ng-show="parentobj.variable1"><a href="#/login">Login</a></li>
     <!--    <li><a href="#/profilepage">Profile</a></li> -->
+     <!-- <li ng-show="obj.displaylogout"><input type="submit"  ng-click="logout()" class="btn btn-danger" value="Logout"  ></li> -->
     </ul>
   </div>
 </nav> 
