--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
   <h1  class="loginhead">Login</h1>      
   </div>
       
- <form ng-app="myApp" ng-submit="submit(form)"  name="myForm" novalidate>
+ <form ng-submit="submit(form)"  name="myForm" novalidate>
   <div class="form-group">
    <label for="name">Username:</label>
     <input type="text" class="form-control" name="user" ng-model="form.user" required >
