--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <a id="head" class="navbar-brand" href="#"><i class="fa fa-home"></i> Home</a>
   </div>
     <ul class="nav navbar-nav">
-      <li><a href="#/about">About</a></li>
-      <li><a href="#/contact">Contact</a></li>
-       <li><a href="#/register">Register</a></li>
-       <li ng-show="parentobj.variable1"><a href="#/login">Login</a></li>
-    <!--    <li><a href="#/profilepage">Profile</a></li> -->
-     <!-- <li ng-show="obj.displaylogout"><input type="submit"  ng-click="logout()" class="btn btn-danger" value="Logout"  ></li> -->
+     <!--  <li><a href="#/about">About</a></li>
+      <li><a href="#/contact">Contact</a></li> -->
+     <li ng-show="registerobj.showregister"><a href="#/register">Register</a></li>
+     <li ng-show="loginobj.showlogin"><a href="#/login">Login</a></li>
+     <li ng-show="profileobj.showprofile"><a href="#/profilepage">Profile</a></li>
+     <li ng-show="logoutobj.showlogout"><input id="logoutbtn" type="submit"  ng-click="logout()" class="btn btn-danger" value="Logout"  ></li>
     </ul>
   </div>
 </nav> 
