--- a/pages/profilepage.html
+++ b/pages/profilepage.html
@@ -30,8 +30,11 @@
   <div class="col-md-12" >  
    <p><b>Post</b> <span class="glyphicon glyphicon-camera"></span></p>
    <input type="file" id="File1" file-input="files" /> 
-   <button class="btn btn-primary uploadbtn" ng-click="uploadFile()">Upload</button> 
+   <!-- <button class="btn btn-primary uploadbtn" ng-click="uploadFile()">Upload</button>  -->
+   <input type="submit"  class="btn btn-primary uploadbtn" value="Upload" ng-click="uploadFile()">
+   <span class="imagestatus">{{imagestatus}}</span>
   </div>  
+
 </div>
 
              <!--    </div> -->
@@ -105,8 +108,8 @@
     <h3 class="head"> Add friends</h3>
     <div class="cointainer" ng-repeat="user in allusers">
       <div  ng-repeat="friend in showfriendsarray">
-       <p ng-if="user.id==friend">{{user.name}}
-        <span> <input id="addbtn" type="button" class="btn btn-primary" ng-click="addfriend(user)" value="Add friend"  /></span>
+       <p  ng-if="user.id==friend">{{user.name}}
+        <span> <input  id="addbtn" type="button" class="btn btn-primary" ng-click="addfriend(user)" value="Add friend"  /></span>
        </p>
      </div>
    </div>
@@ -137,23 +140,27 @@
 <!--your friends end -->
 
 <!-- Your friend photos -->
-<div  ng-repeat="x in farray">
-<div  ng-repeat="image in images">  
- <img ng-if="image.uid==x" ng-src="images/{{image.name}}" width="200" height="200" style="padding:16px; border:1px solid #f1f1f1; margin:16px;" />  
+<div ng-repeat="user in allusers">
+<div ng-repeat="x in farray">
+ <div ng-repeat="image in images">  
+   <p class="username" ng-if="image.uid==x && user.id==x">{{ user.name }}</p>
+  <img ng-if="image.uid==x && user.id==x" ng-src="images/{{image.name}}" width="200" height="200" style="padding:16px; border:1px solid #f1f1f1; margin:16px;" />  
+ 
+ </div>
 </div>
 </div>
 <!-- your friend photos end -->
 
 <!--Your friends posts -->
   <div class="row yourfriendsposts">
-    <div class="col-md-12" > 
-   <h3 class="head">Your Friends Posts</h3>
-    <table class="table table-bordered">
-     <thead>
-      <tr>
-       <th>Post Id</th>
-       <th>Friend name</th>
-       <th>Post</th>
+   <div class="col-md-12" > 
+    <h3 class="head">Your Friends Posts</h3>
+     <table class="table table-bordered">
+      <thead>
+       <tr>
+        <th>Post Id</th>
+        <th>Friend name</th>
+        <th>Post</th>
        </tr>
       </thead>
    
@@ -164,9 +171,9 @@
         <td ng-if="post.uid==x">{{ post.post }}</td>
        </tr>
       </tbody>
-    </table>
-  </div>
-</div>
+     </table>
+   </div>
+ </div>
   <!--your friend posts end -->
   
 </div><!--cointainer end -->
