--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 
-  <script src="Scripts/script.js"></script>
+  <script src="js/script.js"></script>
    <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
@@ -25,8 +25,6 @@
       <a id="head" class="navbar-brand" href="#"><i class="fa fa-home"></i> Home</a>
   </div>
     <ul class="nav navbar-nav">
-     <!--  <li><a href="#/about">About</a></li>
-      <li><a href="#/contact">Contact</a></li> -->
      <li ng-show="registerobj.showregister"><a href="#/register">Register</a></li>
      <li ng-show="loginobj.showlogin"><a href="#/login">Login</a></li>
      <li ng-show="profileobj.showprofile" ><a href="#/profilepage">Profile</a></li>
@@ -35,7 +33,7 @@
   </div>
 </nav> 
 
-		<!-- this is where content will get injected -->
+		<!-- this is where view will get injected -->
     <div ng-view></div>
 
 
