--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <ul class="nav navbar-nav">
      <li ng-show="registerobj.showregister"><a href="#/register">Register</a></li>
      <li ng-show="loginobj.showlogin"><a href="#/login">Login</a></li>
+     <li ng-show="homeobj.showhome"><a href="#/timeline">Timeline</a></li>
      <li ng-show="profileobj.showprofile" ><a href="#/profilepage">Profile</a></li>
      <li ng-show="logoutobj.showlogout"><input id="logoutbtn" type="submit"  ng-click="logout()" class="btn btn-danger" value="Logout"  ></li>
     </ul>
