--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!-- define angular app -->
-<html ng-app="kranthi">
+<html ng-app="fbangular">
 
 <head>
   <title>Home</title>
@@ -14,7 +14,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
   <script src="https://cdn.rawgit.com/jonsamwell/angular-auto-validate/master/dist/jcs-auto-validate.js"></script>
 
-  <script src="js/script.js"></script>
+  <script src="js/app.js"></script>
    <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
