--- a/index.html
+++ b/index.html
@@ -28,16 +28,20 @@
     <ul class="nav navbar-nav">
      <li ng-show="registerobj.showregister"><a href="#/register">Register</a></li>
      <li ng-show="loginobj.showlogin"><a href="#/login">Login</a></li>
-     <li ng-show="homeobj.showhome"><a href="#/timeline">Timeline</a></li>
-     <li ng-show="profileobj.showprofile" ><a href="#/profilepage">Profile</a></li>
-     <li ng-show="logoutobj.showlogout"><input id="logoutbtn" type="submit"  ng-click="logout()" class="btn btn-danger" value="Logout"  ></li>
+     <li ng-show="homeobj.showhome"><a href="#/timeline">Activity</a></li>
+     <li ng-show="profileobj.showprofile" ><a href="#/profilepage">My Profile</a></li>
+    <!--  <li ng-show="logoutobj.showlogout"><input id="logoutbtn" type="submit"  ng-click="logout()" class="btn btn-danger" value="Logout"  ></li> -->
+    <li ng-show="logoutobj.showlogout"><a href="#"   ng-click="logout()"><span class="glyphicon glyphicon-off"></span> Logout</a></li>
     </ul>
   </div>
 </nav> 
 
 		<!-- this is where view will get injected -->
-    <div ng-view></div>
+ 
+    <!-- <div ng-view ></div> -->
 
+<ng-view></ng-view>
+<!-- <div class="ng-view" ></div> -->
 
   
 </body>
