--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
    <script src="js/controllers/homepage.controller.js"></script>
    <script src="js/controllers/profilepage.controller.js"></script>
    <script src="js/controllers/friendpage.controller.js"></script>
+   <script src="js/controllers/confirmpage.controller.js"></script>
    <link rel="stylesheet" href="css/stylesheet.css">
     
 </head>
