--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </li>
     </ul>
      <ul class="nav navbar-nav navbar-right">
-     <li ng-show="notifyobj.shownotifications"><a  data-toggle="modal" data-target="#shownotification"><span class="glyphicon glyphicon-cd"></span> Notifications</a>
+     <li ng-show="notifyobj.shownotifications"><a  data-toggle="modal" data-target="#shownotification"><span class="glyphicon glyphicon-cd notification"></span></a>
     
       </ul>
   </div>
